tdf#82824 DOCX import: fix at-char embedded object handling

The anchor type of embedded object was simply not handled, we always
assumed that it's as-char.

When it's at-char set the anchor type accordingly, and also set the
usual 6 properties determining the position of the anchored object.

(cherry picked from commit 10efab2b9a3cf7fc49655c90ba29db4512680c38)

Conflicts:
	sw/qa/extras/ooxmlimport/ooxmlimport.cxx

Reviewed-on: https://gerrit.libreoffice.org/30965
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit d36587570890d3366222fc9cca8482275db85b3b)

Change-Id: I3f8bede33c6f1a0bdc4f4d4ea59c4fc805802291